--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,12 @@
+set -g default-terminal 'tmux-256color'
+
 # Set true color
-set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-overrides ",alacritty:Tc"
+set-option -sa terminal-features ',alacritty:RGB'
+
+# Undercurl Support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # Mouse
 set -g mouse on
@@ -22,6 +29,12 @@ set-option -g renumber-windows 1
 # Set vi-mode
 set-window-option -g mode-keys vi
 
+# Set lower escape time (for vim)
+set-option -sg escape-time 10
+
+# Set focus-events (for vim autoread)
+set-option -g focus-events on
+
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
@@ -30,6 +43,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Open split in cwd
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Nightfox colors for Tmux
 # Style: carbonfox
