--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,39 +1,8 @@
 live_config_reload = true
 
-[colors]
-draw_bold_text_with_bright_colors = false
-
-[[colors.indexed_colors]]
-color = "0x3ddbd9"
-index = 16
-
-[[colors.indexed_colors]]
-color = "0xff7eb6"
-index = 17
-
-[colors.bright]
-black = "0x484848"
-blue = "0x8cb6ff"
-cyan = "0x52bdff"
-green = "0x46c880"
-magenta = "0xc8a5ff"
-red = "0xf16da6"
-white = "0xe4e4e5"
-yellow = "0x2dc7c4"
-
-[colors.normal]
-black = "0x282828"
-blue = "0x78a9ff"
-cyan = "0x33b1ff"
-green = "0x25be6a"
-magenta = "0xbe95ff"
-red = "0xee5396"
-white = "0xdfdfe0"
-yellow = "0x08bdba"
-
-[colors.primary]
-background = "0x161616"
-foreground = "0xf2f4f8"
+import = [
+    "~/.config/alacritty/carbonfox.toml"
+]
 
 [font]
 size = 18.0
@@ -55,3 +24,4 @@ mods = "Control"
 [window]
 dynamic_title = true
 startup_mode = "Fullscreen"
+option_as_alt = "Both"
