chore: moved to ghostty terminal

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
-set -g default-terminal 'tmux-256color'
+set -g default-terminal 'xterm-ghostty'
 
 # Set true color
-set-option -sa terminal-overrides ",alacritty:Tc"
-set-option -sa terminal-features ',alacritty:RGB'
+set-option -sa terminal-overrides ",ghostty:Tc"
+set-option -sa terminal-features ',ghostty:RGB'
 
 # Undercurl Support
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
@@ -54,6 +54,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'erikw/tmux-dark-notify'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 
 run-shell '~/.config/tmux/plugins/tpm/tpm'
 
